buildscript {
	project.ext {
        bootVersion = '1.3.3.RELEASE'
        cloudVersion = '1.1.0.RC2'
        clientVersion = '1.0.4.RELEASE'
        securityVersion = '2.0.9.RELEASE'
		mongodbVersion = '1.3.5.RELEASE'
		aopVersion = '1.3.5.RELEASE'
    }

    repositories {
        mavenCentral()
        jcenter()
        maven {
            url 'http://repo.spring.io/milestone'
        }
    }
    
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${project.bootVersion}"
        classpath 'se.transmode.gradle:gradle-docker:1.2'
        classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
    }
}

apply plugin: 'io.spring.dependency-management'
apply plugin: 'spring-boot'
apply plugin: 'java'
apply plugin: 'docker'
apply plugin: 'idea'
apply plugin: 'signing'
apply plugin: 'application'

dependencyManagement {
    imports {
        mavenBom 'org.springframework.cloud:spring-cloud-dependencies:Brixton.RC1'
    }
}

jar {
    baseName = 'auth-server-mongodb'
    version =  '0.0.1'
}

repositories { 
	mavenCentral() 
	jcenter()
    maven {
        url 'http://repo.spring.io/milestone'
    }
}

dependencies {
    compile("org.springframework.boot:spring-boot-starter-web:${project.bootVersion}")    
    compile("org.springframework.boot:spring-boot-starter-actuator:${project.bootVersion}")
	compile("org.springframework.boot:spring-boot-starter-data-jpa:${project.bootVersion}")
	compile("org.springframework.cloud:spring-cloud-config-client:${project.clientVersion}")
	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")	
	compile("org.springframework.cloud:spring-cloud-starter-eureka:${project.cloudVersion}")
	compile("org.springframework.boot:spring-boot-starter-security:${project.bootVersion}")
	compile("org.springframework.security.oauth:spring-security-oauth2:${project.securityVersion}")
    compile("org.springframework.boot:spring-boot-starter-aop:${project.aopVersion}")
    compile("org.springframework.boot:spring-boot-starter-data-mongodb:${project.mongodbVersion}")
    //compile("com.fasterxml.jackson.core:jackson-databind")

    testCompile group: 'junit', name: 'junit', version: '4.+'
    testCompile 'org.springframework:spring-test:4.0.6.RELEASE'
	
	//testCompile("org.springframework.boot:spring-boot-starter-test")
}

group = 'anilallewar'
mainClassName = 'org.reefminder.microservice.auth.Application'

sourceCompatibility = 1.8
targetCompatibility = 1.8

distDocker {
    exposePort 8899
    setEnvironment 'JAVA_OPTS', '-Dspring.profiles.active=docker'
}

docker {
    useApi true
    hostUrl 'http://192.168.59.103:2375'
    baseImage = 'java:8'
}

bootRun {
    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4100,suspend=n','-Dspring.profiles.active=dev']
}

run {
    jvmArgs = ['-Xdebug', '-Xrunjdwp:server=y,transport=dt_socket,address=4100,suspend=n','-Dspring.profiles.active=dev']
}

task createWrapper(type: Wrapper) {
    gradleVersion = '2.3'
}


